--- a/requirements.txt
+++ b/requirements.txt
@@ -117,7 +117,6 @@ qtconsole==4.2.1
 QtPy==1.1.2
 requests==2.13.0
 rope==0.9.4
-scikit-image==0.12.3
 scikit-learn==0.18.1
 scipy==0.18.1
 simplegeneric==0.8.1
@@ -131,7 +130,7 @@ SQLAlchemy==1.0.13
 statsmodels==0.8.0
 subprocess32==3.2.7
 sympy==1.0
-tables==3.2.2
+tables==3.2.2s
 toolz==0.8.0
 tornado==4.4.1
 tqdm==4.11.2
